Add kamerka to menu.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -405,6 +405,8 @@ items:
       fi: Muikku-valokuvakoppi
       sv: Cheese
       de: Cheese
+  - source: kamerka
+    type: desktop
   - type: custom
     name: Kena Vision Microscope
     command: /opt/av4kav/lib/av4.sh
