Move puavo-set-root-password to a separate command from puavo-install, because we probably need it also after installation, and it makes puavo-install cleaner as well.

--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -51,6 +51,7 @@ install : installdirs
 		puavo-install-grub \
 		puavo-make-install-disk \
 		puavo-reset-laptop-to-factory-defaults \
+		puavo-set-root-password \
 		puavo-setup-filesystems \
 		puavo-update-client \
 		puavo-update-service-script
