Add a missing comma to the dependency list

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -425,7 +425,7 @@ Package: puavo-webwindow
 Architecture: all
 Depends: ${misc:Depends},
  python3,
- libwebkit2gtk-4.0-37
+ libwebkit2gtk-4.0-37,
  gir1.2-webkit2-4.0
 Description: puavo-webwindow opens URLs in an  embedded browser window.
  puavo-webwindow opens URLs in a small embedded WebKit2 window. The URL,
