--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -345,10 +345,10 @@ Description: Bits and pieces needed inside the LTSP chroot image.
 Package: puavomenu
 Architecture: all
 Depends: ${misc:Depends},
- chromium,
  python3,
  python3-yaml,
- python3-xlib
+ python3-xlib,
+ puavo-webwindow
 Description: PuavoMenu is a desktop menu for starting up programs.
  PuavoMenu is a desktop menu for starting up programs
  .
