Fix puavo-webwindow build and do some directory renaming.

--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -95,10 +95,6 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc	\
 		DESTDIR=$(CURDIR)/debian/puavomenu
 
-	$(MAKE) -C puavo-webwindow				\
-		install prefix=/usr sysconfdir=/etc	\
-		DESTDIR=$(CURDIR)/debian/puavo-webwindow
-
 	$(MAKE) -C sharedir/client			\
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-sharedir-client
@@ -126,6 +122,10 @@ override_dh_auto_install:
 	$(MAKE) -C webmenu				\
 		install prefix=/usr sysconfdir=/etc	\
 		DESTDIR=$(CURDIR)/debian/webmenu
+
+	$(MAKE) -C webwindow				\
+		install prefix=/usr sysconfdir=/etc	\
+		DESTDIR=$(CURDIR)/debian/puavo-webwindow
 
 	$(MAKE) -C wlan/ap				\
 		install prefix=/usr sysconfdir=/etc		\
