Rename /var/log/puavo-os --> /var/log/puavo.

--- a/debs/puavo-os/debian/puavo-logrelay.conf
+++ b/debs/puavo-os/debian/puavo-logrelay.conf
@@ -6,7 +6,7 @@ stop on shutdown
 env NODE_ENV=production
 
 script
-    exec 2>>/var/log/puavo-logrelay.log
+    exec 2>>/var/log/puavo/puavo-logrelay.log
     exec 1>&2
     puavo-logrelay
 end script
