Support multiple independent networks with puavo-wlanap (on the gateway side, with "ltsp*/wlan*"-pairs).

--- a/parts/wlan/gw/vtund.conf
+++ b/parts/wlan/gw/vtund.conf
@@ -14,10 +14,10 @@ puavo-wlanap {
     keepalive yes;
 
     up {
-        program "puavo-wlangw-vtun-up %% wlan0";
+        program "puavo-wlangw-vtun-up %% %A";
     };
 
     down {
-        program "puavo-wlangw-vtun-down %% wlan0";
+        program "puavo-wlangw-vtun-down %% %A";
     };
 }
