--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -35,6 +35,10 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-core
 
+	$(MAKE) -C desktop-applet				\
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-desktop-applet
+
 	$(MAKE) -C devscripts				\
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-devscripts
