--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -12,25 +12,13 @@ INSTALL_PROGRAM = $(INSTALL)
 INSTALL_DATA = $(INSTALL) -m 644
 
 .PHONY : all
-all : po/fi/puavo-client-updater-applet.mo po/sv/puavo-client-updater-applet.mo
-
-po/puavo-client-updater-applet.pot : puavo-client-updater-applet.py
-	xgettext --omit-header --language Python --keyword=_tr -o $@ $^
-
-%.po : po/puavo-client-updater-applet.pot
-	msgmerge --update --no-fuzzy-matching --backup=off $@ $<
-	touch $@
-
-%.mo : %.po
-	msgfmt $< --output-file $@
+all:
 
 .PHONY : installdirs
 installdirs :
 	mkdir -p $(DESTDIR)$(bindir)
 	mkdir -p $(DESTDIR)$(datarootdir)/dbus-1/system-services
 	mkdir -p $(DESTDIR)$(datarootdir)/icons/hicolor/scalable/status
-	mkdir -p $(DESTDIR)$(datarootdir)/locale/fi/LC_MESSAGES
-	mkdir -p $(DESTDIR)$(datarootdir)/locale/sv/LC_MESSAGES
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-ltsp-install
 	mkdir -p $(DESTDIR)$(libdir)/puavo-ltsp-install
 	mkdir -p $(DESTDIR)$(sbindir)
@@ -67,12 +55,6 @@ install : installdirs
 		icons/update-idle.svg \
 		icons/update-installed.svg
 
-	$(INSTALL_PROGRAM) -t $(DESTDIR)$(datarootdir)/locale/fi/LC_MESSAGES \
-		po/fi/puavo-client-updater-applet.mo
-
-	$(INSTALL_PROGRAM) -t $(DESTDIR)$(datarootdir)/locale/sv/LC_MESSAGES \
-		po/sv/puavo-client-updater-applet.mo
-
 	cp -R preseeds $(DESTDIR)$(datarootdir)/puavo-ltsp-install/
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(libdir)/puavo-ltsp-install \
@@ -94,6 +76,3 @@ install : installdirs
 
 .PHONY : clean
 clean :
-	rm -rf po/fi/*.mo
-	rm -rf po/sv/*.mo
-	rm -rf po/*.pot
