Initial commit for the Abitti USB stick factory. Not even version 1.0 yet, but here we go.
It works. Kind of.

--- a/parts/Makefile
+++ b/parts/Makefile
@@ -1,4 +1,5 @@
-subdirs         := admins                     \
+subdirs         := abitti_usb_factory         \
+                   admins                     \
                    autopilot                  \
                    bigtouch-shutdown          \
                    blackboard                 \
