Rename puavo-abitti-usb-factory --> puavo-usb-factory and rename abitti-factory-session --> usb-factory-session. Though the motivation for this tool is writing Abitti-images in mass-production-style to usb memory devices, it can be used for other types of disk images.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -72,12 +72,12 @@ Description: Puavo admin intergration
     via AuthorizedKeysCommand (requires OpenSSH 6.1 or newer).
  .
 
-Package: puavo-abitti-usb-factory
+Package: puavo-usb-factory
 Architecture: all
 Depends: ${misc:Depends},
  python3
-Description: Puavo Abitti USB Factory
- Make Abitti-images in an easy way.
+Description: Puavo USB Factory
+ Write disk images to usb memory devices in mass production style.
  .
 
 Package: puavo-autopilot
