Add Mafynetti to menu.

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -297,6 +297,7 @@ programs:
   - luola
 
   #M
+  - mafynetti
   - mandelbulber
   - marble-qt:
         name:
@@ -833,6 +834,7 @@ menus:
             - geogebra
             - geogebra6
             - org.kde.kmplot
+            - mafynetti
             - marble-qt
             - google-earth
             - org.kde.kgeography
