--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -258,6 +258,8 @@ items:
     type: desktop
   - source: org.kde.kmplot
     type: desktop
+  - source: mafynetti
+    type: desktop
   - source: marble-qt
     type: desktop
   - source: google-earth
