Fix printer configuration icon

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -587,7 +587,8 @@ programs:
             de: Sumopaint Online Bildbearbeitung
         icon: /usr/share/icons/Faenza/apps/96/gimp.png
   - supertuxkart
-  - system-config-printer
+  - system-config-printer:
+        icon: /usr/share/icons/Faenza/devices/48/printer.png
 
   #T
   - t-lasku
