Fix cura desktop name.

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -77,7 +77,7 @@ programs:
           fi: CmapTools-miellekartta
           sv: CmapTools-mindmap
           de: CmapTools-Mindmap
-  - cura
+  - cura-appimage
 
   #D
   - db_koulu1
