puavo-usb-factory.tcl: use images to render progress information. We need some more images and textual indicators as well.

--- a/parts/usb-factory/Makefile
+++ b/parts/usb-factory/Makefile
@@ -1,9 +1,11 @@
 prefix = /usr/local
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
+datarootdir = $(prefix)/share
 
 INSTALL = install
 INSTALL_PROGRAM = $(INSTALL)
+INSTALL_DATA = $(INSTALL) -m 0644
 
 .PHONY: all
 all:
@@ -11,10 +13,13 @@ all:
 .PHONY: installdirs
 installdirs:
 	mkdir -p $(DESTDIR)$(bindir)
+	mkdir -p $(DESTDIR)$(datarootdir)/puavo-usb-factory
 
 .PHONY: install
 install: installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-usb-factory
+	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-usb-factory \
+		usbstick-empty.png usbstick-full.png
 
 .PHONY: clean
 clean:
