puavo-usb-factory.tcl: Add flash-drive images with different colours.

--- a/parts/usb-factory/Makefile
+++ b/parts/usb-factory/Makefile
@@ -7,6 +7,14 @@ INSTALL = install
 INSTALL_PROGRAM = $(INSTALL)
 INSTALL_DATA = $(INSTALL) -m 0644
 
+FLASHDRIVE_IMAGES = flash-drive-blue.png    \
+                    flash-drive-green.png   \
+                    flash-drive-grey.png    \
+                    flash-drive-magenta.png \
+                    flash-drive-red.png     \
+                    flash-drive-yellow.png  \
+                    flash-drive-white.png
+
 .PHONY: all
 all:
 
@@ -19,7 +27,13 @@ installdirs:
 install: installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-usb-factory
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-usb-factory \
-		usbstick-empty.png usbstick-full.png
+		${FLASHDRIVE_IMAGES}
+
+.PHONY: downscale-images
+downscale-images:
+	for image in ${FLASHDRIVE_IMAGES}; do \
+	    convert -resize x68 big_images/$${image} $${image}; \
+	done
 
 .PHONY: clean
 clean:
