Rename puavo-usb-factory.tcl to puavo-usb-factory, and puavo-usb-factory to puavo-usb-writer.

--- a/parts/usb-factory/Makefile
+++ b/parts/usb-factory/Makefile
@@ -25,7 +25,8 @@ installdirs:
 
 .PHONY: install
 install: installdirs
-	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-usb-factory
+	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-usb-factory \
+			   puavo-usb-writer
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-usb-factory \
 		${FLASHDRIVE_IMAGES}
 
