Replace autopoweroff with our own, new and and shiny "puavo-autopoweroff". Observes events on keyboards and mouse, and does not do shutdown if something has happened on those in the last 30 minutes.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -5,8 +5,7 @@ _pkgs_builddeps := unicode-data
 
 _pkgs_parts     := puavo-ds \
                    puavo-os
-_pkgs_ports     := autopoweroff    \
-                   fluentd         \
+_pkgs_ports     := fluentd         \
                    gnome-shell     \
                    grub2           \
                    gvfs            \
