--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -15,6 +15,10 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-autopilot
 
+	$(MAKE) -C autopoweroff				\
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-autopoweroff
+
 	$(MAKE) -C bigtouch-shutdown \
 		install prefix=/usr sysconfdir=/etc \
 		DESTDIR=$(CURDIR)/debian/puavo-bigtouch-shutdown
