Do not use transitional packages from Wheezy.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -251,8 +251,9 @@ Depends: ${misc:Depends},
  openprinting-ppds,
  openssh-server,
  openvpn,
- pnm2ppa,
  printer-driver-gutenprint,
+ printer-driver-pnm2ppa,
+ printer-driver-pxljr,
  puavo-client,
  puavo-devscripts,
  puavo-ds-slave,
@@ -263,7 +264,6 @@ Depends: ${misc:Depends},
  puavo-tftpd,
  puavo-tftpd-hooks,
  puavo-wlangw,
- pxljr,
  qemu-kvm,
  rdiff,
  rsyslog-relp,
