Add "kojo", an environment for learning programming. Basically like turtle graphics but with Scala.

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -262,6 +262,7 @@ programs:
             sv: Redigera videon
             de: Video bearbeiten
         icon: kino
+  - kojo
 
   #L
   - libreoffice-base:
@@ -826,6 +827,7 @@ menus:
             - processing
             - robboscratch2
             - appinventor
+            - kojo
 
   - menu-education:
         name:
