Add Nightcode to puavomenu.

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -263,6 +263,7 @@ programs:
             de: Video bearbeiten
         icon: kino
   - kojo
+  - Nightcode
 
   #L
   - libreoffice-base:
@@ -848,6 +849,7 @@ menus:
             - robboscratch2
             - appinventor
             - kojo
+            - Nightcode
 
   - menu-education:
         name:
